# r2_video_hosting

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  example.config.yml
admin-webui/: next.config.ts  package.json  tsconfig.json
admin-webui/app/: globals.css  layout.tsx  page.tsx  template.tsx
admin-webui/app/analytics/: page.tsx
admin-webui/app/videos/: page.tsx
admin-webui/components/: AuthWrapper.tsx  Button.tsx  Input.tsx  Navbar.tsx  ProcessingQueues.tsx  ProgressBar.tsx  VideoEditModal.tsx  VideoPreviewModal.tsx
admin-webui/context/: UploadContext.tsx
admin-webui/utils/: format.ts
migrations/: 20250114000000_create_videos_table.sql  20251122000000_add_views_tracking.sql  20251123000000_optimize_search.sql  20251203000000_add_subtitles_and_attachments.sql  20251203100000_add_chapters_table.sql  20251207000000_add_idx_storage_key.sql  20251207100000_add_audio_tracks.sql  20251208000000_add_sprites_key.sql  20251209000000_remove_analytics.sql  20251210000000_add_is_public_to_videos.sql
src/: clickhouse.rs  config.rs  database.rs  main.rs  rate_limit.rs  storage.rs  types.rs  video.rs
src/handlers/: analytics.rs  common.rs  content.rs  mod.rs  player.rs  upload.rs  video.rs
