[package]
name = "r2_video_hosting"
version = "1.4.1"
edition = "2024"

[workspace.package]
authors = ["Asadbek Karimov <contact@asadk.dev>"]

[dependencies]
axum = { version = "0.8.7", features = ["multipart"] }
aws-sdk-s3 = { version = "1.116.0", features = ["behavior-version-latest"] }
axiom = "0.2.1"
regex = "1.12.2"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.19.0", features = ["v4"] }
anyhow = "1.0.100"
tokio-stream = "0.1.17"
serde_yaml = "0.9.34-deprecated"
tower-http = { version = "0.6.7", features = ["fs", "trace", "cors"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = "0.4.42"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
async-stream = "0.3.6"
clickhouse = { version = "0.14.1", features = [] }
tokio-util = { version = "0.7.17", features = ["io"] }
reqwest = { version = "0.12.24", features = ["rustls-tls"], default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3